# ogn-core-kit

./: .gitignore  .gitleaks.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  public_audit.sh
.github/workflows/: ci.yml  public-audit-nightly.yml  public-audit-pr.yml  release.yml
pipelines/: ogn_variant.nf
sdk/python/: README.md  pyproject.toml
sdk/python/ogn_cli/: __init__.py  config.py  doctor.py  estimate_cost.py  main.py  proof_bundle.py  results.py  run.py  setup.py  util.py
sdk/python/ogn_cli/tools/: __init__.py  ogn_demo_metrics_check.py  run_giab_validation.py
sdk/python/ogn_runner/: __init__.py  main.py
sdk/python/ogn_sdk/: __init__.py  client.py  grpc_client.py
sdk/rust/ogn-sdk/: Cargo.toml  README.md
sdk/rust/ogn-sdk/src/: lib.rs
spec/v1/: jobspec.md  jobspec.schema.json
spec/v1/conformance/: A_minimal_valid_jobspec.json  B_valid_with_optional_fields.json  C_invalid_schema_version.json  D_invalid_timeline_transition.json  E_unknown_fields_ignored.json  README.md
tests/: test_ogn_runner.py
tools/: public_audit.sh  validate_conformance.py
